# kvm

./: .gitignore  .golangci.yml  ARM_BUILD_FINAL_FIX.md  ARM_BUILD_FINAL_SUCCESS.md  ARM_BUILD_FIX_SUMMARY.md  ARM_GSPT_FINAL_FIX.md  BUILD_FIXES_X86.md  BUILD_SUCCESS_SUMMARY.md  CHANGELOG_X86.md  DEVELOPMENT.md  Dockerfile.build  FINAL_BUILD_STATUS.md  FINAL_STATUS.md  FINAL_SUCCESS_REPORT.md  HDMI_OUTPUT_GUIDE.md  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  README_X86.md  RELEASE_GUIDE.md  RELEASE_TEST.md  ULTIMATE_SUCCESS_CONFIRMATION.md  X86_64_BUILD_VERIFICATION.md  X86_64_RUNTIME_SUCCESS.md  block_device.go  block_device_linux.go  block_device_notlinux.go  block_device_x86_64.go  build_x86.sh  cloud.go  config.go  config_x86_example.json  dc_metrics.go  dev_deploy.sh  display.go  fuse.go  go.mod  go.sum  hdmi_output.go  hidrpc.go  (+28 more)
.devcontainer/: devcontainer.json  install-deps.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: README.md  build.yml  golangci-lint.yml  quick-build.yml  release.yml  smoketest.yml  ui-lint.yml
cmd/: gspt_arm.go  gspt_arm_ci.go  gspt_other.go  gspt_x86_64.go  main.go  main_x86_64.go
internal/confparser/: confparser.go  confparser_test.go  utils.go
internal/hidrpc/: hidrpc.go  message.go
internal/logging/: logger.go  pion.go  root.go  sse.go  sse.html  utils.go
internal/mdns/: mdns.go
internal/native/: cgo_arm_simple.go  cgo_linux.go  cgo_notlinux.go  cgo_x86_64.go  chan.go  chan_nocgo.go  ctrl.h  display.go  display_nocgo.go  display_x86_64.go  hdmi_output_x86_64.go  log.go  native.go  rpc_hdmi_x86_64.go  single.go  video.go
internal/native/cgo/: .gitignore  CMakeLists.txt  CMakeLists_x86_64.txt  ctrl.c  ctrl.h  ctrl_x86_64.c  edid.c  edid.h  log.h  log_handler.c  log_handler.h  lvgl-minify.del  lvgl-minify.patch  lvgl_defconfig  screen.c  screen.h  ui  ui_index.gen.sh  ui_index.h  ui_index_x86_64.h  video.c  video.h
internal/network/: config.go  dhcp.go  hostname.go  netif.go  netif_linux.go  netif_notlinux.go  rpc.go  utils.go
internal/timesync/: http.go  metrics.go  ntp.go  rtc.go  rtc_linux.go  (+2 more)
resource/: dev_test.sh  embed.go  jetkvm_native  jetkvm_native.sha256  netboot.xyz-multiarch.iso
scripts/: build_arm_simple.sh  build_cgo.sh  build_utils.sh  ci_helper.sh  create_release.sh  dev_deploy.sh  update_netboot_xyz.sh
ui/: .eslintrc.cjs  .prettierrc  dev_device.sh  eslint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+192 files in other folders)
